@@ -345,6 +345,9 @@ Extension Modules
 Library
 -------
 
+- bpo-30576 : http.server supports HTTP compression (gzip).  Patch by Pierre
+  Quentel.
+
 - bpo-30463: Addded empty __slots__ to abc.ABC.  This allows subclassers
   to deny __dict__ and __weakref__ creation.  Patch by Aaron Hall.
 
